--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,4 +5,12 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+     <div>
+        <h2>Quick Links:</h2>
+        <ul>
+         <a href="./Quizs">Quizy</a> <br/>
+         <a href="./Questions">Pytania</a> <br/>
+         <a href="./Answers">Odpowiedzi</a>
+        </ul>
+    </div>
 </div>
