--- a/Views/Questions/Index.cshtml
+++ b/Views/Questions/Index.cshtml
@@ -28,7 +28,7 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Quiz.Id)
+                @Html.DisplayFor(modelItem => item.Quiz.Title)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
