--- a/Views/Answers/Create.cshtml
+++ b/Views/Answers/Create.cshtml
@@ -23,7 +23,7 @@
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="QuestionId" class="control-label"></label>
+                <label asp-for="QuestionId" class="control-label">Question description</label>
                 <select asp-for="QuestionId" class ="form-control" asp-items="ViewBag.QuestionId"></select>
             </div>
             <div class="form-group">
