--- a/Views/Questions/Create.cshtml
+++ b/Views/Questions/Create.cshtml
@@ -18,7 +18,7 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="QuizId" class="control-label"></label>
+                <label asp-for="QuizId" class="control-label">Quiz title</label>
                 <select asp-for="QuizId" class ="form-control" asp-items="ViewBag.QuizId"></select>
             </div>
             <div class="form-group">
