--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
+                            <span class="nav-link text-dark">|</span>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Quizs" asp-action="Index">Quizy</a>
                         </li>
                         <li class="nav-item">
@@ -33,6 +36,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Answers" asp-action="Index">Odpowiedzi</a>
+                        </li>
+                        <li class="nav-item">
+                            <span class="nav-link text-dark">|</span>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="UserQuizs" asp-action="Index">Ukonczone Quizy</a>
