--- a/Views/UserQuizs/Index.cshtml
+++ b/Views/UserQuizs/Index.cshtml
@@ -32,7 +32,7 @@
                 @Html.DisplayFor(modelItem => item.User.Email)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Quiz.Id)
+                @Html.DisplayFor(modelItem => item.Quiz.Title)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DateCompleted)
