--- a/Views/Questions/Details.cshtml
+++ b/Views/Questions/Details.cshtml
@@ -20,7 +20,7 @@
             @Html.DisplayNameFor(model => model.Quiz)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Quiz.Id)
+            @Html.DisplayFor(model => model.Quiz.Title)
         </dd>
     </dl>
 </div>
