--- a/Views/Answers/Edit.cshtml
+++ b/Views/Answers/Edit.cshtml
@@ -24,7 +24,7 @@
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="QuestionId" class="control-label"></label>
+                <label asp-for="QuestionId" class="control-label">Question Description</label>
                 <select asp-for="QuestionId" class="form-control" asp-items="ViewBag.QuestionId"></select>
                 <span asp-validation-for="QuestionId" class="text-danger"></span>
             </div>
