--- a/Views/Questions/Delete.cshtml
+++ b/Views/Questions/Delete.cshtml
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.Quiz)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Quiz.Id)
+            @Html.DisplayFor(model => model.Quiz.Title)
         </dd>
     </dl>
     
