--- a/Views/Questions/Edit.cshtml
+++ b/Views/Questions/Edit.cshtml
@@ -19,7 +19,7 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="QuizId" class="control-label"></label>
+                <label asp-for="QuizId" class="control-label">Quiz Title</label>
                 <select asp-for="QuizId" class="form-control" asp-items="ViewBag.QuizId"></select>
                 <span asp-validation-for="QuizId" class="text-danger"></span>
             </div>
