--- a/Views/UserQuizs/Details.cshtml
+++ b/Views/UserQuizs/Details.cshtml
@@ -14,13 +14,13 @@
             @Html.DisplayNameFor(model => model.User)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.Id)
+            @Html.DisplayFor(model => model.User.Email)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Quiz)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Quiz.Id)
+            @Html.DisplayFor(model => model.Quiz.Title)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DateCompleted)
